force-app/main/default/objects/Product__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the product is currently active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>