force-app/main/default/objects/Product__c/fields/Product_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Id__c</fullName>
    <description>Stores the ID of the ContentDocument associated with the product image.</description>
    <label>Product Image ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>