force-app/main/default/objects/Product__c/validationRules/Prevent_Invalid_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Invalid_Price</fullName>
    <active>true</active>
    <description>Ensures the unit price is greater than zero.</description>
    <errorConditionFormula>Unit_Price__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit price must be greater than zero.</errorMessage>
</ValidationRule>